--- a/strings.conf
+++ b/strings.conf
@@ -23,3 +23,6 @@
 
 #gozaburo
 !victory 0x1680 Victory by the effect of "The Reckoning"
+
+#heartland
+!victory 0x1681 Victory by the effect of "Heartland Security Lockdown"
