Add Forbidden Memories Skills

--- a/strings.conf
+++ b/strings.conf
@@ -26,3 +26,9 @@
 
 #heartland
 !victory 0x1681 Victory by the effect of "Heartland Security Lockdown"
+
+#Friendship
+!setname 0x259c Friendship
+
+#The Haunting
+!setname 0x260c The Haunting
